<resources>
    <string name="app_name">Battleship</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="host_game">Host game</string>
    <string name="join_game">Join game</string>
    <string name="edit_profile">Edit profile</string>
    <string name="name">Name</string>
    <string name="google">Google</string>
    <string name="sign_in_with">Sign in with...</string>
    <string name="set_nickname">Set nickname</string>
    <string name="tap_to_update_picture">Tap to update\npicture</string>
    <string name="title_activity_battleship">BattleshipActivity</string>
    <string name="randomize">Randomize</string>
    <string name="start">Start</string>
    <string name="share_it_with_your_opponent">Share it with your opponent</string>
    <string name="ready">Ready</string>
    <string name="not_ready">Not ready</string>
    <string name="lobby_id">Lobby ID</string>
    <string name="connect">Connect</string>
    <string name="empty_slot">Empty slot</string>
    <string name="invalid_lobby_id">Invalid lobby ID</string>
    <string name="lobby_is_full">Lobby is full</string>
    <string name="firing"> (firing) </string>
    <string name="leave_lobby">Leave lobby?</string>
    <string name="leave">Leave</string>
    <string name="cancel">Cancel</string>
    <string name="force_leave_message">Your opponent left the game or connection lost</string>
    <string name="close">Close</string>
    <string name="you_lost">You lost!</string>
    <string name="you_won">You won!</string>
    <string name="opponent">Opponent:&#160;</string>
    <string name="won">WON</string>
    <string name="lost">LOST</string>
    <string name="history">History</string>
    <string name="google_sign_in_error_1">Cannot sign in with Google.</string>
    <string name="google_sign_in_error2">Cannot sign in with Google. Check your internet connection.</string>
</resources>