<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.activities.StartupActivity">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingBottom="10dp"
            android:text="@string/app_name"
            android:textAppearance="@style/TextAppearance.AppCompat.Title"
            android:textSize="48sp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingBottom="5dp"
            android:textAlignment="center"
            android:text="@string/sign_in_with"/>


        <androidx.cardview.widget.CardView
            android:id="@+id/sign_in_google"
            android:layout_width="170dp"
            android:layout_height="50dp"
            android:layout_margin="10dp"
            android:layout_gravity="center">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <ImageButton
                    android:layout_gravity="center_vertical|start"
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:layout_marginStart="10dp"
                    android:scaleType="fitXY"
                    android:src="@drawable/google"
                    android:background="@android:color/transparent"/>

                <TextView
                    android:layout_gravity="center_vertical"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="25dp"
                    android:scaleType="fitCenter"
                    android:adjustViewBounds="true"
                    android:text="@string/google" />



                <ProgressBar
                    android:id="@+id/loading_view"
                    android:layout_margin="15dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:visibility="gone" />

            </LinearLayout>

        </androidx.cardview.widget.CardView>


    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>